<resources>
    <string name="app_name">Regional Transport</string>
    <string name="add_stop_number">Add Stop</string>
    <string name="action_settings">Settings</string>
    <string name="stop_number">Stop Number</string>
    <string name="homeActBusHint">1660</string>
    <string name="homeActbutton">Go</string>
    <string name="stop_description">Stop Description: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_Stop_Name_Button">Add</string>
    <string name="title_activity_add_bus_stop">Add A Stop Number</string>
    <string name="university_to_howe">University</string>
    <string name="add_stop_button">Add Stop</string>
    <string name="update_stop_button">Update Stop</string>
    <string name="delete_stop_button">Delete Stop</string>
    <string name="query_stop_button">Search</string>
    <string name="title_activity_stop_database">Stop Database</string>
    <string name="saved_database_button">Lookup Bus Stops</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_show_all_stops">Show All Stops</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_look_up">Look Up</string>
    <string name="title_activity_edit_stop">Edit Stop</string>
</resources>
