<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_bus_stop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003366"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddBusStopActivity"
    tools:showIn="@layout/activity_add_bus_stop">

    <TextView
        android:id="@+id/addActStopDescTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif"
        android:text="@string/stop_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        tools:textStyle="bold"
        android:textColor="#f6e806"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/addActStopDescEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/addActStopDescTV"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fadingEdge="horizontal"
        android:hint="@string/university_to_howe"
        android:inputType="textLongMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHighlight="#BDBDBD"
        android:layout_centerHorizontal="true"
        android:gravity="top" />


    <TextView
        android:id="@+id/addActStopNumberTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/addActStopDescTV"
        android:layout_below="@+id/addActStopDescEV"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:text="@string/stop_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        tools:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="#f6e806"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/addActStopNumberEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/addActStopDescEV"
        android:layout_below="@+id/addActStopNumberTV"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/homeActBusHint"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHighlight="#BDBDBD"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/addActButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_stop_button"
        android:layout_below="@+id/addActStopNumberEV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="#CDDC39"
        android:onClick="addBusStopAndFinish"
        android:layout_centerVertical="false" />

</RelativeLayout>
