<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_stop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003366"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rawat.anand.sacramentort.EditStopActivity"
    tools:showIn="@layout/activity_edit_stop">

    <TextView
        android:id="@+id/editActStopDescTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif"
        android:text="@string/stop_description"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#f6e806"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/editActStopDescEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editActStopDescTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fadingEdge="horizontal"
        android:fontFamily="serif"
        android:gravity="top"
        android:hint="@string/university_to_howe"
        android:inputType="textLongMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHighlight="#BDBDBD" />


    <TextView
        android:id="@+id/editActStopNumberTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editActStopDescTV"
        android:layout_below="@+id/editActStopDescEV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="serif"
        android:text="@string/stop_number"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#f6e806"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/editActStopNumberEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editActStopDescEV"
        android:layout_below="@+id/editActStopNumberTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/homeActBusHint"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHighlight="#BDBDBD" />

    <Button
        android:id="@+id/editActButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editActStopNumberEV"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_corner"
        android:elevation="7dp"
        android:fontFamily="serif"
        android:onClick="editBusStopAndFinish"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/update_stop_button"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/editActDelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editActButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_corner"
        android:elevation="7dp"
        android:fontFamily="serif"
        android:onClick="delBusStopAndFinish"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/delete_stop_button"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

</RelativeLayout>
