<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_look_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003366"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rawat.anand.sacramentort.LookUpActivity"
    tools:showIn="@layout/activity_look_up">

    <Button
        android:id="@+id/lookupActBusNumberBut"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="serif"
        android:onClick="openHomeActivity"
        android:padding="5dp"
        android:text="@string/stop_number"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <ListView
        android:id="@+id/lookupActBusList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/homeActBNEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:alpha="10"
        android:theme="@style/AppTheme" />

    <AutoCompleteTextView
        android:id="@+id/homeActBNEdit"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lookupActbutton"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="2dp"
        android:background="?android:attr/editTextBackground"
        android:ems="8"
        android:hint="@string/homeActBusHint"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textColorHighlight="#BDBDBD"
        android:textColorLink="#BDBDBD" />

    <Button
        android:id="@+id/lookupActbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lookupActBusNumberBut"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="serif"
        android:onClick="queryStopNumber"
        android:padding="5dp"
        android:text="@string/query_stop_button"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/lookupdbTV"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:padding="5dp"
        android:text="@string/saved_database_button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#f6e806"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

</RelativeLayout>
